src/test/data/tezos-client/stack/type_errors/simple.tz
parameter unit;
storage unit;
code {
       PUSH int 123;
       CDR;
       NIL operation;
       PAIR;
     }